--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN10379xZXvN7FmrqWVLmbm",
+      "authorship_tag": "ABX9TyO9+xTyElWQULxuqEiHrfk7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,19 +61,19 @@
         "|Field | Description |\n",
         "|---|---|\n",
         "|**id**:| listing ID|\n",
-        " **name**: |name of the listing\n",
-        " **host_id**: |host ID\n",
-        " **host_name**: |name of the host\n",
-        " **neighbourhood_group**: |location\n",
-        " **neighbourhood**: |area\n",
-        " **latitude**: |latitude coordinates\n",
-        " **longitude**: |longitude coordinates\n",
-        " **room_type**: |listing space type\n",
-        " **price**: |price in dollars\n",
-        " **minimum_nights**: |amount of nights minimum\n",
-        " **number_of_reviews**: |number of reviews\n",
-        " **last_review**: |latest review\n",
-        " **reviews_per_month**: |number of reviews per month\n",
+        " |**name**: |name of the listing|\n",
+        "| **host_id**: |host ID|\n",
+        "| **host_name**: |name of the host|\n",
+        " |**neighbourhood_group**: |location|\n",
+        " |**neighbourhood**: |area|\n",
+        " |**latitude**: |latitude coordinates|\n",
+        " |**longitude**: |longitude coordinates|\n",
+        " |**room_type**: |listing space type|\n",
+        " |**price**: |price in dollars|\n",
+        " |**minimum_nights**: |amount of nights minimum|\n",
+        " |**number_of_reviews**: |number of reviews|\n",
+        " |**last_review**: |latest review|\n",
+        " |**reviews_per_month**: |number of reviews per month|\n",
         "| **calculated_host_listings_count**: |amount of listing per host|\n",
         "| **availability_365**: |number of days when listing is available for booking|\n",
         "\n",
