--- a/Exploratory_Data_Analysis_of_airbnb.ipynb
+++ b/Exploratory_Data_Analysis_of_airbnb.ipynb
@@ -165,7 +165,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "Provide your GitHub Link here.\n",
+        "\n",
+        "[https://github.com/hrisky11/Eda-of-airbnb](https://github.com/hrisky11/Eda-of-airbnb)"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -290,7 +292,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "# Import Libraries\n",
+        "#importing necessery libraries for future analysis of the dataset\n",
+        "import numpy as np # linear algebra\n",
+        "import pandas as pd #data processing\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.image as mpimg\n",
+        "%matplotlib inline\n",
+        "import seaborn as sns"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -310,10 +319,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load Dataset"
+        "# Load Dataset\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=pd.read_csv('/content/drive/MyDrive/Colab Notebooks/almabetter python /EDA airbnb/Airbnb NYC 2019.csv')"
+      ],
+      "metadata": {
+        "id": "-PfTzVpl5xbt"
       },
       "execution_count": null,
       "outputs": []
@@ -330,7 +352,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "df.head(3)"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -350,13 +373,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "df.shape"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The airbnb dataset have 48895 rows and 16 columns."
+      ],
+      "metadata": {
+        "id": "SmKiE_B56S39"
+      }
     },
     {
       "cell_type": "markdown",
@@ -370,13 +403,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "df.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The dataset have total 16 variables in which 3 are float64 types, 7 are int64 types and 6 are object types."
+      ],
+      "metadata": {
+        "id": "outTIyeF62wQ"
+      }
     },
     {
       "cell_type": "markdown",
@@ -390,13 +433,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "df.duplicated().sum()"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The dataset have no duplicate entry."
+      ],
+      "metadata": {
+        "id": "xymfpz-X8QJK"
+      }
     },
     {
       "cell_type": "markdown",
@@ -410,7 +463,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "df.isna().sum().sum()"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -421,7 +475,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "import missingno as msno\n",
+        "# Visualizing the missing values\n",
+        "msno.bar(df,color=\"lightblue\", sort=\"ascending\", figsize=(15,5), fontsize=15).set(title= \"missing values\")"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
