--- a/Exploratory_Data_Analysis_of_airbnb.ipynb
+++ b/Exploratory_Data_Analysis_of_airbnb.ipynb
@@ -92,6 +92,7 @@
         "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -497,7 +498,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer Here\n",
+        "\n",
+        "These 48895 rows and  16 columns provide a very rich amount of information for deep data exploration we can do on this dataset. \n",
+        "The dataset have total 16 variables in which 3 are float64 types, 7 are int64 types and 6 are object types and no duplicate entry. The dataset have 20141 empty cell. The missing is value persent in columns last_review, reviews_per_months, host_name and name.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -515,7 +521,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "df.columns"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -526,7 +533,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "df.describe(include='all')"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -546,7 +554,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer Here\n",
+        "\n",
+        "|Field | Description |\n",
+        "|---|---|\n",
+        "|**id**:| listing ID|\n",
+        " |**name**: |name of the listing|\n",
+        "| **host_id**: |host ID|\n",
+        "| **host_name**: |name of the host|\n",
+        " |**neighbourhood_group**: |location|\n",
+        " |**neighbourhood**: |area|\n",
+        " |**latitude**: |latitude coordinates|\n",
+        " |**longitude**: |longitude coordinates|\n",
+        " |**room_type**: |listing space type|\n",
+        " |**price**: |price in dollars|\n",
+        " |**minimum_nights**: |amount of nights minimum|\n",
+        " |**number_of_reviews**: |number of reviews|\n",
+        " |**last_review**: |latest review|\n",
+        " |**reviews_per_month**: |number of reviews per month|\n",
+        "| **calculated_host_listings_count**: |amount of listing per host|\n",
+        "| **availability_365**: |number of days when listing is available for booking|"
       ],
       "metadata": {
         "id": "aJV4KIxSnxay"
@@ -564,7 +591,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n",
+        "for i in df.columns.tolist():\n",
+        "  print(\"The no. of unique values in the columns \",i,\"is\",df[i].nunique(),\".\")"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
