--- a/Exploratory_Data_Analysis_of_airbnb.ipynb
+++ b/Exploratory_Data_Analysis_of_airbnb.ipynb
@@ -297,10 +297,10 @@
         "#importing necessery libraries for future analysis of the dataset\n",
         "import numpy as np # linear algebra\n",
         "import pandas as pd #data processing\n",
-        "import matplotlib.pyplot as plt\n",
-        "import matplotlib.image as mpimg\n",
+        "import matplotlib.pyplot as plt # ploting the data\n",
+        "import matplotlib.image as mpimg \n",
         "%matplotlib inline\n",
-        "import seaborn as sns"
+        "import seaborn as sns # ploting the data\n"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -633,6 +633,81 @@
     {
       "cell_type": "markdown",
       "source": [
+        "first deal with NaN values columns which is present in last_review, reviews_per_month, host_name and name."
+      ],
+      "metadata": {
+        "id": "wJ8r2OEGTnsX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#replacing all NaN values in 'reviews_per_month' with 0\n",
+        "df.fillna({'reviews_per_month':0},inplace=True)\n",
+        "#examing changes\n",
+        "df.reviews_per_month.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "vOHtj-HlJLAS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#dropping columns that are not significant or could be unethical to use for our future data exploration and predictions\n",
+        "df.drop(['id','host_name','last_review'], axis=1, inplace=True)\n",
+        "#examing the changes\n",
+        "df.head(3)"
+      ],
+      "metadata": {
+        "id": "C8s6DyKRH_Hn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#see the NaN values row in column name in the data set\n",
+        "df[df['name'].isna()]"
+      ],
+      "metadata": {
+        "id": "lLb1OL1OWNrj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Unique values in name colunm\n",
+        "df.name.unique().size"
+      ],
+      "metadata": {
+        "id": "RPf-qFOKY0_L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Replacing missing values in the name column\n",
+        "df.fillna({'name':'Not Mentioned'}, inplace = True)\n",
+        "#check the NaN values again\n",
+        "df.isna().sum()"
+      ],
+      "metadata": {
+        "id": "N8k6CzqLbw4g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### What all manipulations have you done and insights you found?"
       ],
       "metadata": {
@@ -642,7 +717,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Answer Here.\n",
+        "\n",
+        "Attributes such as 'id', 'host_name', and 'last_review' do not contribute much to our data analysis so we can drop these columns. then replace NaN values in reviews_per_month column to zero i.e no reviews.And in the name columns 16 values is missing so give the name \"not mentioned\"."
       ],
       "metadata": {
         "id": "LbyXE7I1olp8"
@@ -669,7 +746,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 1 visualization code"
+        "# Chart - 1 visualization code\n",
+        "#examing some interesting categorical unique values\n",
+        "\n",
+        "#examining the unique values of n_group\n",
+        "\n",
+        "title = 'Properties per Neighbourhood Group'\n",
+        "sns.countplot(df['neighbourhood_group'])\n",
+        "plt.title(title)\n",
+        "plt.ioff()"
       ],
       "metadata": {
         "id": "7v_ESjsspbW7"
@@ -689,7 +774,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Answer Here.\n",
+        "\n",
+        "To undersand how much number of properties listed in each Neighourhood Group."
       ],
       "metadata": {
         "id": "XESiWehPqBRc"
@@ -707,7 +794,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer Here\n",
+        "\n",
+        "Manhattan and Brooklyn has more than 75% of properties and Staten Island and Bronx have very few properties."
       ],
       "metadata": {
         "id": "C_j1G7yiqdRP"
@@ -726,7 +815,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer Here\n",
+        "\n",
+        "Manhattan and Brooklyn has more option as compaire to other because they have more no of properties."
       ],
       "metadata": {
         "id": "3cspy4FjqxJW"
@@ -744,10 +835,21 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 2 visualization code"
+        "# Visualizing the percentage of listings most host have\n",
+        "labels = df['room_type'].unique()\n",
+        "sizes = df['room_type'].value_counts()*100\n",
+        "\n",
+        "plt.figure(figsize = (30,30))\n",
+        "fig, ax = plt.subplots()\n",
+        "ax.pie(sizes, labels = labels, autopct = '%1.1f%%')\n",
+        "ax.axis('equal')  # Equal aspect ratio ensures the pie chart is circular.\n",
+        "ax.set_title('Properties per Room Type')\n",
+        "\n",
+        "\n",
+        "plt.show()"
       ],
       "metadata": {
-        "id": "R4YgtaqtYklH"
+        "id": "_2nbUbpJpaKh"
       },
       "execution_count": null,
       "outputs": []
