--- a/Exploratory_Data_Analysis_of_airbnb.ipynb
+++ b/Exploratory_Data_Analysis_of_airbnb.ipynb
@@ -866,7 +866,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Answer Here.\n",
+        "\n",
+        "To see the share of room types in the data."
       ],
       "metadata": {
         "id": "5aaW0BYyYklI"
@@ -884,7 +886,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer Here\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Private room types properties is 52%\n",
+        "*   Entire home/apt type properties is 45.7%\n",
+        "*   Shared room type properties is 2.4%\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "PSx9atu2YklI"
@@ -921,7 +935,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 3 visualization code"
+        "# Chart - 3 visualization code\n",
+        "top_host_id = df['host_id'].value_counts().head(10)\n",
+        "print(top_host_id)\n",
+        "sns.set(rc={'figure.figsize':(10,8)})\n",
+        "viz_bar = top_host_id.plot(kind='bar')\n",
+        "viz_bar.set_title('Hosts with the most listings in NYC')\n",
+        "viz_bar.set_xlabel('Host IDs')\n",
+        "viz_bar.set_ylabel('Count of listings')\n",
+        "viz_bar.set_xticklabels(viz_bar.get_xticklabels(), rotation=45)\n",
+        "\n",
+        "df['host_id'].value_counts().head(10).sum()/len(df['host_id'])*100"
       ],
       "metadata": {
         "id": "t6GMdE67YoAp"
@@ -941,7 +965,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Answer Here.\n",
+        "\n",
+        "To see the top 10 host listing in NYC."
       ],
       "metadata": {
         "id": "5dBItgRVYoAp"
@@ -959,7 +985,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer Here\n",
+        "\n",
+        "Host id 219517861 have highest number of listings in NYC airbnb. The top 10 host have less than 3% of total properties. "
       ],
       "metadata": {
         "id": "4jstXR6OYoAp"
@@ -996,7 +1024,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 4 visualization code"
+        "# Chart - 4 visualization code\n",
+        "top_host_id = df['neighbourhood'].value_counts().head(20)\n",
+        "print(top_host_id)\n",
+        "sns.set(rc={'figure.figsize':(10,10)})\n",
+        "viz_bar = top_host_id.plot(kind='barh')\n",
+        "viz_bar.set_title('neighbourhood with the most listings in NYC')\n",
+        "viz_bar.set_xlabel('Count of listings')\n",
+        "viz_bar.set_ylabel('neighbourhood')\n",
+        "\n",
+        "\n",
+        "df['neighbourhood'].value_counts().head(20).sum()/len(df['neighbourhood'])*100"
       ],
       "metadata": {
         "id": "irlUoxc8YrdO"
@@ -1016,7 +1054,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Answer Here.\n",
+        "\n",
+        "To see top 20 neighbourhood with the most listings in NYC"
       ],
       "metadata": {
         "id": "aJRCwT6DYrdO"
@@ -1034,7 +1074,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "Answer Here\n",
+        "\n",
+        "Williamsuburg have highest no of listing property i.e. 3920.\n",
+        "The top 20 neighbourhood contain 66% of total propperties of airbnb."
       ],
       "metadata": {
         "id": "Xx8WAJvtYrdO"
@@ -1071,7 +1114,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 5 visualization code"
+        " #Chart - 5 visualization code\n",
+        "# Visualizing the percentage of listings most host have\n",
+        "labels = df['calculated_host_listings_count'].unique()\n",
+        "sizes = df['calculated_host_listings_count'].value_counts()*100\n",
+        "\n",
+        "plt.figure(figsize = (30,30))\n",
+        "fig, ax = plt.subplots()\n",
+        "ax.pie(sizes, labels = labels, autopct = '%1.1f%%')\n",
+        "ax.axis('equal')  # Equal aspect ratio ensures the pie chart is circular.\n",
+        "ax.set_title('Listings a host has on Airbnb')\n",
+        "\n",
+        "\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "TIJwrbroYuh3"
@@ -1091,7 +1146,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Answer Here.\n",
+        "\n"
       ],
       "metadata": {
         "id": "dcxuIMRPYuh3"
@@ -1146,7 +1202,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 6 visualization code"
+        "# Chart - 6 visualization code\n"
       ],
       "metadata": {
         "id": "kuRf4wtuphqN"
@@ -1746,7 +1802,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Correlation Heatmap visualization code"
+        "# Correlation Heatmap visualization code\n",
+        "# Plotting the correlation matrix\n",
+        "plt.figure(figsize = (15,10))\n",
+        "sns.heatmap(df.corr(), annot=True,square=True, cmap='RdYlGn')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "xyC9zolEZNRQ"
